[tool.poetry]
name = "trainz-dl"
version = "0.1.0"
description = ""
authors = ["David Sn <divad.nnamtdeis@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
fastapi-cache2 = "^0.2.1"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
tortoise-orm = {extras = ["asyncpg"], version = "^0.21.3"}
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
